--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <title>LEONARDO G</title>
 </head>
 <body>
-    <h1>titulo</h1>
-    <h2>titulo</h2>
-    <h3>titulo</h3>
-    <h4>titulo</h4>
-    <h5>titulo</h5>
-    <h6>titulo</h6>
+   
 
     
 
@@ -30,7 +25,8 @@
                 <td>colombia</td>
                 <td>5</td>
                 <td>15</td>
-                <td></td>
+                <td><img src="https://files.antena2.com/antena2/public/2023-06/NuevoescudodelaSeleccionColombia.jpg?VersionId=WIvJJisxDfdkz1x5NLqwi9jCfJKvsZiy" alt="escudo colombia" width="100px" height="100px">
+                <img src="img/escudo_colombia.jpg" alt="" width="100px" height="100px"> </td>
             </tr>
 
             <tr>
