--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <ul>
         <li> <a href="html/tablas.html">IR A TABLAS</a></li>
+        <li> <a href="html/estilos.html">IR A ESTILOS</a></li>
     </ul>
     
 </body>
