css media query

--- a/html/estilos.html
+++ b/html/estilos.html
@@ -21,6 +21,15 @@
 
 </head>
 <body>
+    <h2 id="title_box">BOX MODEL</h2>
+
+    <div id="box_father">
+        <div id="box_model"></div>
+    </div>
+
+
+
+    <br>
     <h1 style="color: mediumspringgreen;background-color: blue;">BIENVENIDOS A ESTILOS </h1>
     
 
