--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEONARDO</title>
+    <link rel="stylesheet" href="../clase1/css/style_loging.css">
 </head>
 <body>
-    <ul>
-        <li> <a href="html/tablas.html">IR A TABLAS</a></li>
-        <li> <a href="html/estilos.html">IR A ESTILOS</a></li>
-    </ul>
-    
+   <div class="background"></div>
+   <div class="centering"></div>
+   <form action="" class="myform"></form>
+   <div class="login_welcome">
+   <img src="" alt="" class="login">
+   <h1>Iniciar Sesion</h1>
+</div>
+<div class="text_field">
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="ingrese su email" aria-label="email" required>
+    <img src="https://static.vecteezy.com/system/resources/previews/007/126/487/non_2x/message-icon-vector.jpg" alt="">
+</div>
+<div class="text_field">
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="Ingrese contraseña" aria-label="password" required>
+    <img src="https://icons.veryicon.com/png/o/miscellaneous/mall-icon-set/password-117.png" alt="">
+</div>
+<input type="submit" value="login" class="my_form_button">
+<div class="my_form-actions">
+    <div>
+        <span>Olvidaste tu contraseña</span>
+        <a href="#" title="recuperar contraseña"> Recuperar contraseña</a>
+
+</div>
+<div class="my_form_signup">
+    <a href="#" title="Crear cuenta"> Crear cuenta</a>
+
+</div>
+</div>
 </body>
 </html>
